[package]
name = "triunity"
version = "0.1.0"
edition = "2021"

[dependencies]
warp = "0.3.7"
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
clap = { version = "4.4", features = ["derive"] }
futures = "0.3"
async-trait = "0.1"

# Only include the working dashboard binary
[[bin]]
name = "triunity-dashboard"
path = "src/bin/dashboard.rs"